# telebot_notifications

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml
app/bot/: keyboards.py  middleware.py
app/bot/handlers/: help.py  reminders.py  start.py
app/core/: config.py  database.py  logger.py  models.py  mongo_collections.py
app/crud/: reminder_crud.py  users_crud.py
app/dependencies/: reminder_dependencies.py
app/repositories/: reminder_repository.py  users_repository.py
app/services/: remineder_service.py
app/tests/: conftest.py  test_data.json  test_reminders.py
scripts/: start_bot.py
